--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Заголовок!</h1>
-    <p>Текст!</p>
+    <h1>Заголовок</h1>
+    <p>Текст</p>
   </body>
 </html>
